dockers/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http_account
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                  cors:
                    allow_origin_regex:
                    - ".*"
                    allow_methods: GET, POST, PUT, HEAD, OPTIONS
                    allow_headers: Content-Type
          http_filters:
          - name: envoy.cors
          - name: envoy.grpc_json_transcoder
            config:
              proto_descriptor: "/descriptor.pb"
              services: ["example.ElementService"]
              print_options:
                always_print_primitive_fields: true
                always_print_enums_as_ints: true
          - name: envoy.router

  clusters:
  - name: local_service
    connect_timeout: 0.250s
    type: STATIC
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: "local-service"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8090

admin:
  access_log_path: "/var/log/envoy/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
